# bip353-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  setup_python.sh  test_ffi.c  test_python_working.py
examples/: basic_resolve.rs  ffi_example.c  python_example.py
include/: bip353.h
src/: config.rs  error.rs  ffi.rs  lib.rs  metrics.rs  monitoring.rs  python.rs  resolver.rs  types.rs  wallet.rs
tests/: integration.rs
